# GEM-Apex-Creator-Studio

./: .gitignore  API_KEY_GUIDE.md  CHANGELOG.md  GEM-Apex-START.bat  README.md  START.bat  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: architecture.md
general_info/: GHOSTWRITER_STIL-KODEX.md  Komplette Erinnerungen aller Charactere.md  Locations und Equitment.md
input_examples/: Role_Anette.md  Role_Betti.md  Role_Die Charaktere aus der Schwabenquelle.md  Role_Doris.md  Role_Frank.md  Role_Julia.md  Role_Kathi.md  Role_Manuela.md  Role_Nebencharaktere.md  Role_Sandra.md  Role_Vero.md
scripts/: lint.sh  run_checks.py
src/: main.py
src/ai/: client.py
src/exporters/: markdown_exporter.py
src/gui/: main_window.py  sidebar.py  state.py  tab_config.py
src/gui/tabs/: chat.py  physiology.py
src/models/: character.py  options_data.py
src/utils/: config_loader.py
system_instructions/: Systemprompt.md
tests/: test_ai_client.py  test_chat_controller.py  test_config_loader.py  test_sidebar_controller.py  test_tab_config.py
