[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "general_info"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["general_info"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401", "F841"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.pip-audit]
requirement = "requirements.txt"
